# AdventOfCode2021

./: Cargo.toml
days/day1/: Cargo.toml
days/day1/src/: lib.rs
days/day10/: Cargo.toml
days/day10/src/: lib.rs
days/day11/: Cargo.toml
days/day11/src/: lib.rs
days/day12/: Cargo.toml
days/day12/src/: 12.py
days/day13/: Cargo.toml
days/day13/src/: lib.rs
days/day14/: Cargo.toml
days/day14/src/: lib.rs
days/day15/: Cargo.toml
days/day15/src/: lib.rs
days/day16/: Cargo.toml
days/day16/src/: lib.rs
days/day17/: Cargo.toml
days/day17/src/: lib.rs
days/day18/: Cargo.toml
days/day18/src/: 18.py
days/day19/: Cargo.toml
days/day2/: Cargo.toml
days/day2/src/: lib.rs
days/day20/: Cargo.toml
days/day20/src/: lib.rs
days/day21/: Cargo.toml
days/day21/src/: lib.rs
days/day22/: Cargo.toml
days/day23/: Cargo.toml
days/day24/: Cargo.toml
days/day25/: Cargo.toml
days/day3/: Cargo.toml
days/day3/src/: lib.rs
days/day4/: Cargo.toml
days/day4/src/: lib.rs
days/day5/: Cargo.toml
days/day5/src/: lib.rs
days/day6/: Cargo.toml
days/day6/src/: lib.rs
days/day7/: Cargo.toml
days/day7/src/: lib.rs
days/day8/: Cargo.toml
days/day8/src/: lib.rs
days/day9/: Cargo.toml
days/day9/src/: lib.rs
input/: 4.in
main/: Cargo.toml
main/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
