[package]
name = "day6"
version = "0.1.0"
authors = ["Tom Praschan <13141438+tom-anders@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils" }
parse-display = '0.5.3'
